force-app/main/default/objects/Relationship_Profile__c/Relationship_Profile__c.object-meta.xml
<CustomObject>
    <label>Relationship Profile</label>
    <nameField>
        <label>Relationship Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationship Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>