force-app/main/default/objects/Relationship_Profile__c/fields/End_Date__c.field-meta.xml
<CustomField>

    <fullName>End_Date__c</fullName>

    <label>End Date</label>

    <type>Date</type>

</CustomField>