force-app/main/default/objects/Relationship_Profile__c/fields/Health_Score__c.field-meta.xml
<CustomField>

    <fullName>Health_Score__c</fullName>

    <label>Health Score</label>

    <type>Number</type>

    <precision>3</precision>

    <scale>0</scale>

</CustomField>