force-app/main/default/objects/Relationship_Profile__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>

    <fullName>Relationship_Type__c</fullName>

    <label>Relationship Type</label>

    <type>Picklist</type>

    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>

            <value>
                <fullName>Strategic</fullName>
            </value>

            <value>
                <fullName>Operational</fullName>
            </value>

            <value>
                <fullName>Partner</fullName>
            </value>

        </valueSetDefinition>
    </valueSet>

</CustomField>