force-app/main/default/objects/Relationship_Profile__c/listViews/Active_Relationships.listView-meta.xml
<ListView>
    <fullName>Active_Relationships</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Relationships</label>
</ListView>